---------------------------------------------------------------------------------------------------
Version: 2.7.1
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.7.0
Date: 2025-10-29
  Features:
    - Added support for vehicles (cars, tanks, spidertrons).
---------------------------------------------------------------------------------------------------
Version: 2.6.8
Date: 2025-10-27
  Bugfixes:
    - Fixed multiple issues related to handling elevated rails and train signals.
---------------------------------------------------------------------------------------------------
Version: 2.6.7
Date: 2025-10-19
  Bugfixes:
    - Fixed that some entities like electromagnetic plants were not properly mirrored in project editor.
---------------------------------------------------------------------------------------------------
Version: 2.6.6
Date: 2025-10-18
  Bugfixes:
    - Fixed issue with inserter pickup/drop positions when blueprinted in some cases
---------------------------------------------------------------------------------------------------
Version: 2.6.5
Date: 2025-10-09
  Bugfixes:
    - Fixed crash when attempting to take a blueprint with no entities.
---------------------------------------------------------------------------------------------------
Version: 2.6.4
Date: 2025-10-04
  Buxfixes:
    - Actually fixed crash when creating a new stage, on a project loaded in an earlier version. Don't use 2.5.1 y'all
---------------------------------------------------------------------------------------------------
Version: 2.6.3
sate: 2025-09-27
  Bugfixes:
    - Fixed an issue with trains when inserting a stage before the stage a train is in.
    - Fixed partially missing support for agricultural towers.
    - Fixed several issues related to elevated rails.
  Changes:
    - Editor should now be more resilient to crashes due to missing previews.