@@ -1,7 +1,10 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.7.1
 Date: ????
-  Changes:
+  Bugfixes
+    - Fixed handling of item requests for fuel and nutrients.
+    - Fixed several issues relating to bot item requests.
+    - Duplicate item requests highlights will no longer appear on some entities.
 ---------------------------------------------------------------------------------------------------
 Version: 2.7.0
 Date: 2025-10-29
